2023.160:
	- Add FAQ to documentation and update example code to match API changes.

2023.159:
	WARNING: API change as follows:
	The `fpos` and `last` arguments of ms3_readmsr(), ms3_readmsr_r(),
	and ms3_readmsr_selection() have been removed.  The same capabilities
	is avaiable and details are included in the porting guide.

	- Add JSON Merge Patch capability to mseh_set_ptr_r().
	- Fix zero-padding of empty bytes following data in miniSEED v2 creation.
	- Rename DE_ASCII to DE_TEXT to generalize to UTF-8, legacy mapping provided.
	- Add MS3Tolerance_INITIALIZER for MS3Tolerance values.

2023.155:
	WARNING: API change as follows:
	The `MS3TraceList.numtraces` was renamed `MS3TraceList.numtraceids`.

	- New test suite based on Tau :https://github.com/jasmcaus/tau.
	Many tests were added and the suite now works on MS-Windows.

	- Update example/lm_pack.c:
	  * Use improved test sinusuoid that contains all differences for
	    Steim1 and Steim2 encoding.
	  * Add `-2` option to generate miniSEED v2 instead of default v3.

2023.105:
	- Handle special case of year 0 when parsing version 2 blockettes. These
	are now treated as "unset" and not included in the extra headers.
	- Add nstime_t special value of NSTUNSET for use as "unset" meaning.

2023.099:
	WARNING: API change as follows:
	The `path` argument to mseh_get and mseh_set routines is now in
	JSON Pointer (RFC 6901) format.  This is a more appropriate, and
	standardized, format than the pseudo-JSON Path, dotted string style
	previously used.  It also allows more flexibility such as specification
	of an array element.

	- `mseh_get_path_r()` and `mseh_set_path_r()`, previously named without
	the `_r` suffix, now take a additional `parsestate` argument.  This
	functionality allows the parsed extra headers to be retained between
	calls to avoid re-parsing.  For advanced usage, this allows more efficient
	getting or setting of multiple extraheader values.  If used, this state